--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "server node with express",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon ./index.js --exec babel-node -e js",
+    "start": "nodemon ./index.js --exec babel-node -e js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Pallies/tp-nodeExpress#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.4",
