--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "server node with express",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node ./src/index.js",
+    "start": "nodemon --exec babel-node index.js",
     "compile": "npx babel src --out-dir lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
