--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Pallies/tp-nodeExpress#readme",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
